# mandrop

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
src/mandrop/: __init__.py  __main__.py  engine.py  generator.py  movie.py  params.py  run.py  stats.py  viz.py
